--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
     "react-native-unimodules": "0.14.10",
     "react-native-web": "~0.13.12",
-    "styled-components": "^5.3.1",
-    "react-native-screens": "~3.4.0",
-    "react-native-safe-area-context": "3.2.0"
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
