--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.0.7",
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.2",
     "axios": "^0.22.0",
     "expo": "~42.0.1",
+    "expo-av": "~9.2.3",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
@@ -24,13 +26,15 @@
     "react-native-screens": "~3.4.0",
     "react-native-unimodules": "0.14.10",
     "react-native-web": "~0.13.12",
+    "react-native-youtube": "^2.0.2",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "typescript": "~4.0.0",
     "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2"
+    "@types/react-native": "~0.63.2",
+    "@types/react-native-video": "^5.0.9",
+    "typescript": "~4.0.0"
   },
   "private": true
 }
